<resources>
    <string name="app_name">Review Food</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_content_home">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">Home</string>
    <string name="moinhat">Mới nhất</string>
    <string name="doanhmuc">Doanh mục</string>
    <string name="khuvuc">HCM</string>
    <string name="gantoi">Gần tôi</string>
    <string name="giaohang">Giao hàng</string>
    <string name="danhgia">Đánh giá</string>
    <string name="blogs">Blogs</string>
    <string name="map_api_key">AIzaSyCQ8spyKHH2IxhdesbmLxl-iMYS5XIyoWI</string>
    <string name="otp_code">Code</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map">Map</string>
</resources>